--- a/ddp-workspace/projects/ddp-rarex/src/assets/i18n/en.json
+++ b/ddp-workspace/projects/ddp-rarex/src/assets/i18n/en.json
@@ -7,7 +7,6 @@
     }
   },
   "Header": {
-    "NAA10": "NAA10",
     "Alts": {
       "PoweredBy": "Powered by RARE-X"
     }
@@ -317,7 +316,6 @@
     "NoParticipants": "You don't have any participants at this moment. You can add one by clicking the button below."
   },
   "ParticipantDeletionDialog": {
-    "Title": "Confirmation",
     "Text": "Are you sure you want to delete this participant? All data entered for this participant will be cleared."
   },
   "LoginLandingPage": {
@@ -346,8 +344,8 @@
         "Title": "Submit",
         "AriaLabel": "Submit button"
       },
-      "Yes": "Yes",
-      "No": "No"
+      "Delete": "Delete",
+      "Cancel": "Cancel"
     },
     "Navigation": {
       "Dashboard": "Dashboard"
