DDP-5850 translate MBC more details page to Spanish

--- a/ddp-workspace/projects/ddp-mbc/src/assets/i18n/en.json
+++ b/ddp-workspace/projects/ddp-mbc/src/assets/i18n/en.json
@@ -439,7 +439,8 @@
                 "OtherQuestions": {
                     "Title": "Do you have other questions?",
                     "Section1": {
-                        "Text": "You can access a 1 page printable information sheet about the project linked here:",
+                        "TextPt1": "You can access a 1 page printable information sheet about the project linked here:",
+                        "TextPt2": ".",
                         "Link": "The Metastatic Breast Cancer Project"
                     },
                     "Section2": {
