DDP-5862 buttons for consent page translation

--- a/ddp-workspace/projects/ddp-mbc/src/assets/i18n/es.json
+++ b/ddp-workspace/projects/ddp-mbc/src/assets/i18n/es.json
@@ -500,8 +500,8 @@
         "CloseButton": "[es]CLOSE",
         "AddButton": "[es]ADD",
         "CancelButton": "[es]CANCEL",
-        "NextButton": "[es]NEXT",
-        "PreviousButton": "[es]PREV",
+        "NextButton": "SIGUIENTE",
+        "PreviousButton": "ANTERIOR",
         "SavingButton": "[es]SAVING",
         "EditButton": "EDITAR",
         "ReviewButton": "[es]VIEW",
