Translate MBC Mail Address Component

--- a/ddp-workspace/projects/ddp-mbc/src/assets/i18n/es.json
+++ b/ddp-workspace/projects/ddp-mbc/src/assets/i18n/es.json
@@ -600,93 +600,93 @@
         },
         "MailAddress": {
             "Fields": {
-                "Name": "[es]Full Name",
-                "Country": "[es]Country/Territory",
-                "Street1": "[es]Street Address",
-                "Street2": "[es]Apt/Floor #",
+                "Name": "Nombre completo",
+                "Country": "País/territorio",
+                "Street1": "Dirección",
+                "Street2": "N.º de apartamento/piso",
                 "State": {
-                    "State": "[es]State",
-                    "Province": "[es]Province",
-                    "State/Province/Region": "[es]State/Province/Region"
+                    "State": "Estado",
+                    "Province": "Provincia",
+                    "State/Province/Region": "Estado/Provincia/Región"
                 },
-                "City": "[es]City",
-                "Phone": "[es]Phone",
+                "City": "Cuidad",
+                "Phone": "Teléfono",
                 "Zip": {
-                    "Zip Code": "[es]Zip Code",
-                    "Postal Code": "[es]Postal Code",
-                    "Zip/Postal Code": "[es]Zip/Postal Code"
+                    "Zip Code": "Código postal",
+                    "Postal Code": "Código postal",
+                    "Zip/Postal Code": "Código postal"
                 },
-                "Choose": "[es]Choose {{field}} ..."
+                "Choose": "Elija {{field}}..."
             },
             "Suggestion": {
-                "Title": "[es]We have checked your address entry and have suggested changes that could help ensure delivery.",
-                "Subtitle": "[es]Click \"Suggested\" to update form. You will be able to click \"As entered\" to restore your original entries.",
-                "Suggested": "[es]Suggested:",
-                "AsEntered": "[es]As Entered:"
+                "Title": "Hemos verificado la dirección que ingresó y le sugerimos cambios para ayudar a que la entrega se haga correctamente.",
+                "Subtitle": "Haga clic en “Sugerencias” para actualizar el formulario. Podrá hacer clic en la opción “Datos originales” para que los datos queden tal como estaban.",
+                "Suggested": "Sugerencias:",
+                "AsEntered": "Datos originales:"
             },
             "Error": {
-                "InvalidAddress": "[es]Invalid address.",
-                "CannotVerify": "[es]Could not verify address, please double-check your address.",
-                "UnknownVerifyError": "[es]An unknown error occurred while verifying address.",
-                "FieldIsRequired": "[es]{{field}} is required",
-                "FieldIsInvalid": "[es]{{field}} has an invalid value",
-                "InvalidHouseNumber": "[es]Street number could not be found",
-                "INTERNAL_SERVER_ERROR": "[es]We're sorry, something went wrong. If the problem persists please contact us at support@easypost.com.",
-                "NOT_ACCEPTABLE": "[es]The resource identified by the request is only capable of generating response entities which have content characteristics not acceptable according to the accept headers sent in the request.",
-                "NOT_FOUND": "[es]The requested resource could not be found.",
-                "FORBIDDEN": "[es]Unable to access the requested resource.",
-                "PAYMENT_REQUIRED": "[es]Insufficient funds. Please check your billing settings at http://www.easypost.com/account/billing.",
-                "UNAUTHORIZED": "[es]Unable to access the requested resource, authorization failed.",
-                "BAD_REQUEST": "[es]Malformed request. Please check the contents and retry.",
-                "PAYMENT_GATEWAY.ERROR": "[es]The payment processor could not handle the request. Please try again or contact support@easypost.com if the problem persists.",
-                "MODE.UNAUTHORIZED": "[es]This resource requires a production API Key to access.",
-                "MODE.CONFLICT": "[es]API Key mode conflicted with parameter mode.",
-                "DATE.PARSE.FAILURE": "[es]At least one date was formatted incorrectly and could not be parsed.",
-                "PARAMETER.FORBIDDEN": "[es]The request could not be completed due to forbidden properties present in the parameters.",
-                "PARAMETER.REQUIRED": "[es]Missing required parameter.",
-                "ADDRESS.PARAMETERS.INVALID_CHARACTER": "[es]The parameters passed contained an invalid character.",
-                "ADDRESS.PARAMETERS.INVALID": "[es]The parameters passed to create an Address were missing or invalid.",
-                "ADDRESS.COUNTRY.INVALID": "[es]Invalid 'country', please provide a 2 character ISO country code.",
-                "ADDRESS.VERIFICATION.NOT_FOUND": "[es]Address Not Found.",
-                "ADDRESS.VERIFICATION.FAILURE": "[es]The address was unable to be verified.",
-                "ADDRESS.VERIFY.UNAVAILABLE": "[es]Address verification is not available. Please try again.",
-                "ADDRESS.VERIFICATION.INVALID": "[es]One of the verifications selected is invalid.",
-                "ADDRESS.VERIFY.FAILURE": "[es]Unable to verify address.",
-                "ADDRESS.VERIFY.CARRIER_INVALID": "[es]Unable to verify address using provided carrier.",
-                "ADDRESS.VERIFY.UPSTREAM_UNAVAILABLE": "[es]Address verification is not available due to an upstream service not responding. Please try again.",
-                "ADDRESS.VERIFY.ONLY_US": "[es]USPS can only validate US addresses.",
-                "ADDRESS.VERIFY.INTL_NOT_ENABLED": "[es]International Verification not enabled on this account. Please contact support@easypost.com.",
-                "ADDRESS.VERIFY.MISSING_STREET": "[es]Insufficient address data provided. A street must be provided.",
-                "ADDRESS.VERIFY.MISSING_CITY_STATE_ZIP": "[es]Insufficient address data provided. A city and state or a zip must be provided.",
-                "E.COUNTRY.UNSUPPORTED": "[es]This country is not supported in this mode. Try in production mode.",
-                "E.ENGINE.UNAVAILABLE": "[es]No verification engine is available to service this country. Please try again later.",
-                "E.QUERY.UNANSWERABLE": "[es]We can not provide enough data in this country to satisfy this request. Please try again later.",
-                "E.ADDRESS.NOT_FOUND": "[es]We could not find the entered address.",
-                "E.SECONDARY_INFORMATION.INVALID": "[es]Invalid secondary information(Apt/Suite#). Please note, this can show up as an error on a successful request.",
-                "E.SECONDARY_INFORMATION.MISSING": "[es]Missing secondary information(Apt/Suite#). Please note, this can show up as an error on a successful request.",
-                "E.HOUSE_NUMBER.MISSING": "[es]House number is missing.",
-                "E.HOUSE_NUMBER.INVALID": "[es]We could not find the street number provided.",
-                "E.STREET.MISSING": "[es]Street is missing.",
-                "E.STREET.INVALID": "[es]Street is invalid.",
-                "E.BOX_NUMBER.MISSING": "[es]Box number is missing.",
-                "E.BOX_NUMBER.INVALID": "[es]Box number is invalid.",
-                "E.ADDRESS.INVALID": "[es]Invalid city/state/ZIP.",
-                "E.ZIP.NOT_FOUND": "[es]Zip not found.",
-                "E.ZIP.INVALID": "[es]Zip invalid.",
-                "E.ZIP.PLUS4.NOT_FOUND": "[es]Zip + 4 not found.",
-                "E.ADDRESS.MULTIPLE": "[es]Multiple addresses were returned with the same zip.",
-                "E.ADDRESS.INSUFFICIENT": "[es]Insufficient/incorrect address data.",
-                "E.ADDRESS.DUAL": "[es]Dual address.",
-                "E.STREET.MAGNET": "[es]Street address is ambiguous.",
-                "E.CITY_STATE.INVALID": "[es]Unverifiable city / state.",
-                "E.STATE.INVALID": "[es]Invalid State.",
-                "E.ADDRESS.DELIVERY.INVALID": "[es]Invalid delivery address.",
-                "E.TIMED_OUT": "[es]Exceeded max timeout.",
-                "E.TIME_ZONE.UNAVAILABLE": "[es]The time zone service is currently unavailable.",
-                "E.PO_BOX.INTERNATIONAL": "[es]Cannot verify international PO Box. Please note, this can show up as an error on a successful request."
+                "InvalidAddress": "Dirección no válida.",
+                "CannotVerify": "No pudimos verificar la dirección. Revise si es correcta.",
+                "UnknownVerifyError": "Se produjo un error desconocido al verificar la dirección.",
+                "FieldIsRequired": "El campo {{field}} es obligatorio.",
+                "FieldIsInvalid": "El campo {{field}} tiene un valor no válido.",
+                "InvalidHouseNumber": "No se encontró el número de la calle.",
+                "INTERNAL_SERVER_ERROR": "Lamentablemente, algo salió mal. Si el problema continúa, envíe un mensaje a support@easypost.com.",
+                "NOT_ACCEPTABLE": "El recurso detectado por la solicitud solo puede generar entidades de respuesta cuyo contenido tiene características inaceptables según los encabezados aceptables enviados en la solicitud.",
+                "NOT_FOUND": "No se encontró el recurso solicitado.",
+                "FORBIDDEN": "No se puede acceder al recurso solicitado.",
+                "PAYMENT_REQUIRED": "Fondos insuficientes. Verifique las opciones de facturación en http://www.easypost.com/account/billing.",
+                "UNAUTHORIZED": "No se puede acceder al recurso solicitado. Hubo un error de autorización.",
+                "BAD_REQUEST": "Solicitud con estructura incorrecta. Verifique el contenido y vuelva a intentarlo.",
+                "PAYMENT_GATEWAY.ERROR": "El procesador de pagos no pudo gestionar la solicitud. Vuelva a intentarlo o envíe un mensaje a support@easypost.com si el problema continúa.",
+                "MODE.UNAUTHORIZED": "Este recurso requiere una clave API de producción para permitir el acceso.",
+                "MODE.CONFLICT": "El modo de la clave API está en conflicto con el modo de los parámetros.",
+                "DATE.PARSE.FAILURE": "Al menos una fecha tiene un formato incorrecto y no se pudo analizar.",
+                "PARAMETER.FORBIDDEN": "La solicitud no se pudo llevar a cabo porque los parámetros tienen propiedades prohibidas.",
+                "PARAMETER.REQUIRED": "Falta un parámetro obligatorio.",
+                "ADDRESS.PARAMETERS.INVALID_CHARACTER": "Los parámetros utilizados tenían un carácter no válido.",
+                "ADDRESS.PARAMETERS.INVALID": "Faltan los parámetros utilizados para crear la dirección o no son válidos.",
+                "ADDRESS.COUNTRY.INVALID": "País no válido. Indique un código de país ISO de dos caracteres.",
+                "ADDRESS.VERIFICATION.NOT_FOUND": "No se encontró la dirección.",
+                "ADDRESS.VERIFICATION.FAILURE": "No se pudo verificar la dirección.",
+                "ADDRESS.VERIFY.UNAVAILABLE": "No es posible verificar la dirección. Vuelva a intentarlo.",
+                "ADDRESS.VERIFICATION.INVALID": "Una de las verificaciones seleccionadas no es válida.",
+                "ADDRESS.VERIFY.FAILURE": "No se pudo verificar la dirección.",
+                "ADDRESS.VERIFY.CARRIER_INVALID": "No se puede verificar la dirección con el proveedor indicado.",
+                "ADDRESS.VERIFY.UPSTREAM_UNAVAILABLE": "No se puede verificar la dirección porque un servicio en la secuencia no responde. Vuelva a intentarlo.",
+                "ADDRESS.VERIFY.ONLY_US": "USPS solo permite validar direcciones de EE. UU.",
+                "ADDRESS.VERIFY.INTL_NOT_ENABLED": "En esta cuenta no se permite la verificación internacional. Envíe un mensaje a support@easypost.com.",
+                "ADDRESS.VERIFY.MISSING_STREET": "No se indicaron suficientes datos para la dirección. Se debe indicar una calle.",
+                "ADDRESS.VERIFY.MISSING_CITY_STATE_ZIP": "No se indicaron suficientes datos para la dirección. Se deben indicar una ciudad y un estado o un código postal.",
+                "E.COUNTRY.UNSUPPORTED": "Este país no se admite en este modo. Intente con el modo de producción.",
+                "E.ENGINE.UNAVAILABLE": "No hay ningún motor de verificación para prestar servicio a este país. Vuelva a intentarlo más tarde.",
+                "E.QUERY.UNANSWERABLE": "No podemos brindar suficientes datos en este país para llevar a cabo esa solicitud. Vuelva a intentarlo más tarde.",
+                "E.ADDRESS.NOT_FOUND": "No encontramos la dirección ingresada.",
+                "E.SECONDARY_INFORMATION.INVALID": "Información secundaria no válida (N.º de apartamento/oficina). Tenga en cuenta que eso puede causar errores en solicitudes correctas.",
+                "E.SECONDARY_INFORMATION.MISSING": "Falta información secundaria (N.º de apartamento/oficina). Tenga en cuenta que eso puede causar errores en solicitudes correctas.",
+                "E.HOUSE_NUMBER.MISSING": "Falta el número de casa.",
+                "E.HOUSE_NUMBER.INVALID": "No encontramos el número de calle indicado.",
+                "E.STREET.MISSING": "Falta la calle.",
+                "E.STREET.INVALID": "La calle no es válida.",
+                "E.BOX_NUMBER.MISSING": "Falta el número de casilla postal.",
+                "E.BOX_NUMBER.INVALID": "El número de casilla postal no es válido.",
+                "E.ADDRESS.INVALID": "Ciudad/Estado/Código postal no válidos.",
+                "E.ZIP.NOT_FOUND": "No se encontró el código postal.",
+                "E.ZIP.INVALID": "Código postal no válido.",
+                "E.ZIP.PLUS4.NOT_FOUND": "No se encontró el código postal + 4.",
+                "E.ADDRESS.MULTIPLE": "Encontramos varias direcciones con el mismo código postal.",
+                "E.ADDRESS.INSUFFICIENT": "Datos insuficientes/incorrectos en la dirección.",
+                "E.ADDRESS.DUAL": "Dirección duplicada.",
+                "E.STREET.MAGNET": "La dirección es ambigua.",
+                "E.CITY_STATE.INVALID": "Ciudad/Estado no verificables.",
+                "E.STATE.INVALID": "Estado no válido.",
+                "E.ADDRESS.DELIVERY.INVALID": "Dirección de entrega no válida.",
+                "E.TIMED_OUT": "Se superó el tiempo máximo de espera.",
+                "E.TIME_ZONE.UNAVAILABLE": "El servicio de zona horaria no está disponible en este momento.",
+                "E.PO_BOX.INTERNATIONAL": "No se puede verificar la casilla postal internacional. Tenga en cuenta que eso puede causar errores en solicitudes correctas."
             }
         },
-        "TooltipAlt": "[es]Information",
+        "TooltipAlt": "Información",
         "Validators": {
             "DateNavyValidationRule": "[es]Entered date is invalid"
         }
