Implement a common delete dialog for both activity blocks (modal/embedded)

--- a/ddp-workspace/projects/ddp-osteo/src/assets/i18n/en.json
+++ b/ddp-workspace/projects/ddp-osteo/src/assets/i18n/en.json
@@ -744,8 +744,9 @@
             "EditButton": "Edit",
             "DeleteButton": "Delete",
             "SaveButton": "Save",
-            "ConfirmDeletion": "Are you sure you want to delete \nthis information?",
             "CancelButton": "Cancel"
-        }
+        },
+        "ConfirmDeletion": "Are you sure you want to delete \nthis information?",
+        "CancelBtn": "Cancel"
     }
 }
